<resources>
    <string name="app_name">MVVM Movie App</string>

    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="mostPopular">Most Popular</string>
    <string name="comingSoon">Coming Soon</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="settings_text">Turn this option on or off</string>
    <string name="primary_color">Primary color</string>
    <string name="button">Button</string>
    <string name="secondary_color">Secondary color</string>
    <string name="email_icon">email icon</string>
    <string name="action_switch_layout">Switch Layout</string>

    <string name="pref_key_night" translatable="false">key_night_mode</string>
    <string name="pref_night_title">Night mode</string>
    <string name="pref_night_summary">Select a dark or light theme.</string>
    <string name="favourite">Favourite</string>
    <string name="delete">Delete</string>
</resources>
